RESOLVED FIXED317341
Memory leak in `WebContextMenuItem::create()`
https://bugs.webkit.org/show_bug.cgi?id=317341
Summary Memory leak in `WebContextMenuItem::create()`
Charlie Wolfe
Reported 2026-06-17 14:54:39 PDT
...
Attachments
Radar WebKit Bug Importer
Comment 1 2026-06-17 14:54:46 PDT
Charlie Wolfe
Comment 2 2026-06-17 14:55:25 PDT
EWS
Comment 3 2026-06-18 00:13:08 PDT
Committed 315444@main (1120fc57b402): <https://commits.webkit.org/315444@main> Reviewed commits have been landed. Closing PR #67377 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.