Cherry-pick 315444@main (1120fc57b402). https://bugs.webkit.org/show_bug.cgi?id=317341

Memory leak in `WebContextMenuItem::create()`
    https://bugs.webkit.org/show_bug.cgi?id=317341
    rdar://179965723

    Reviewed by Rupin Mittal.

    * Source/WebKit/Shared/WebContextMenuItem.cpp:
    (WebKit::WebContextMenuItem::create):

    Canonical link: https://commits.webkit.org/315444@main

Canonical link: https://commits.webkit.org/305877.784@webkitglib/2.52